chore: copy-types.js to copy types file into src folder
i had created a types package for both frontend and backend
and including the package in dependencies
but it not working koyeb, vercel
now created a copy-types.js which should be run everytime changes types package
it copy the types into the types folder of src

--- a/types/package.json
+++ b/types/package.json
@@ -4,5 +4,8 @@
   "description": "types of this project only",
   "main": "",
   "types": "types.d.ts",
+  "scripts": {
+    "build-types": "node copy-types.js"
+  },
   "license": "ISC"
 }
