--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2",
-    "@types/vinsync":"file:../types"
+    "typescript": "^5.5.2"
   }
 }
