feat: Members list with Admin icon
users modal is changed and added a isAdmin attr
backend.ts file is module in manifest.json
content.ts file with temp console.log("temp")

--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -9,10 +9,12 @@
   "permissions": [
     "background",
     "activeTab",
-    "storage"
+    "storage",
+    "scripting"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
