--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -10,7 +10,8 @@
     "background",
     "activeTab",
     "storage",
-    "scripting"
+    "scripting",
+    "tabs"
   ],
   "background": {
     "service_worker": "background.js",
